// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    DBZ
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Some stuff"
      url="http://example/cosa.jpg"
    />
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Some stuff"
      url="http://example/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid/> match con snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    DBZ
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading your GIFS!
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
